[project]
name = "bajaj-hackrx-finals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "langsmith>=0.4.15",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "langchain-community>=0.2.0",
    "playwright>=1.45.0",
    "chromadb>=1.0.20",
    "langchain-text-splitters>=0.3.9",
]
